<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_workshops"
        android:icon="@drawable/ic_nav_workshops"
        android:title="@string/nav_workshops" />

    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_nav_shop"
        android:title="@string/nav_shop" />

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_nav_gallery"
        android:title="@string/nav_gallery" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_nav_contact"
        android:title="@string/nav_contact" />
</menu>